--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </ul>
                     </div>
                     <!-- my location -->
-                    <div class="info w-1/6 bg-zinc-600 rounded-lg text-2xl font-bold p-2">
+                    <div class="info w-1/6 bg-zinc-950 rounded-lg text-2xl font-bold p-2 border">
                         <i class="fa-solid fa-location-dot text-indigo-300"></i>
                         <h1>Tehran</h1>
                     </div>
